Match new english pages' contents to the finnish pages' contents

--- a/frontend/public/md_pages/information/about_us_en.mdx
+++ b/frontend/public/md_pages/information/about_us_en.mdx
@@ -1,16 +1,22 @@
 # About Us
 
-One of the strategic choices of the University of Helsinki is "*Science and learning belong to everyone*". As a result, the University of Helsinki wants to offer diverse opportunities for continuous learning also for non-degree students. The MOOC Centre plays a key role in this task. Each year, more than 700,000 learners from all over the world study on the platform.
+One of the strategic choices of the University of Helsinki is "Science and learning belong to everyone". As a result, the University of Helsinki wants to offer diverse opportunities for continuous learning also for non-degree students. The MOOC Centre plays a key role in this task. Each year, more than 700,000 learners from all over the world study on the platform.
 
 The online learning environment is developed by an innovative developer team, which includes both experienced researchers, software designers, educational technology and open teaching professionals as well as students of computer science at the University of Helsinki. This allows us to bring diverse expertise to development and implement the best ideas. The learning environment is developed using agile software development methods.
 
-Contact us!
+<br />
+
+*Contact us!*
 
 <br />
 
 Technical issues and problem situations: [mooc@cs.helsinki.fi](mailto:mooc@cs.helsinki.fi)
 
+<br />
+
 Emails are: firstname.surname@helsinki.fi
+
+<br />
 
 [Mika Tompuri](https://www.helsinki.fi/en/about-us/people/people-finder/mika-tompuri-9411181)<br />
 New courses, collaboration with educational institutions
