Add styling to new pages

--- a/frontend/public/md_pages/information/about_us_fi.mdx
+++ b/frontend/public/md_pages/information/about_us_fi.mdx
@@ -4,24 +4,16 @@ Yksi Helsingin yliopiston strategisista valinnoista on ”Tiede ja oppiminen kuu
 
 Verkko-oppimisympäristöä kehittää innovatiivinen kehittäjätiimi, johon kuuluu niin kokeneita tutkijoita, ohjelmistosuunnittelijoita, opetusteknologian ja avoimen opetuksen ammattilaisia kuin Helsingin yliopiston tietojenkäsittelytieteen opiskelijoitakin. Näin saamme tuotua kehitykseen monipuolista osaamista ja toteutettua parhaat ideat. Oppimisympäristöä kehitetään ketterän ohjelmistokehityksen menetelmin.
 
-<br />
-
-*Ota yhteyttä!*
-
-<br />
+## Ota yhteyttä!
 
 Tekniset kysymykset ja ongelmatilanteet: [mooc@cs.helsinki.fi](mailto:mooc@cs.helsinki.fi)
 
-<br />
-
 Sähköpostit ovat muotoa: etunimi.sukunimi@helsinki.fi
-
-<br />
 
 [Mika Tompuri](https://www.helsinki.fi/fi/tutustu-meihin/ihmiset/henkilohaku/mika-tompuri-9411181)<br />
 Uudet kurssit, oppilaitosyhteistyö
 
-[Henrik Nygren](https://www.helsinki.fi/fi/tutustu-meihin/ihmiset/henkilohaku/henrik-nygren-9363993)<br />
+[Henrik Nygren](https://github.com/nygrenh)<br />
 Ohjelmistokehitys
 
 [Leo Leppänen](https://researchportal.helsinki.fi/fi/persons/leo-leppänen)<br />
