--- a/frontend/public/md_pages/information/learning_environment_en.mdx
+++ b/frontend/public/md_pages/information/learning_environment_en.mdx
@@ -4,7 +4,7 @@ Using the MOOC Centre’s learning management system is easy. The learning envir
 
 In the MOOC platform, you have the following features:
 
-*Editing Tools*
+## Editing Tools
 
 Adding and editing course material is based on blocks that you can move on the page. Building course material in a learning environment is straightforward, visual, and does not require programming skills.
 For example, the following types of blocks are used in the learning environment:
@@ -14,7 +14,7 @@ For example, the following types of blocks are used in the learning environment:
 * Embeddings: X (formerly Twitter), YouTube, Spotify, Vimeo, Mentimer, ThingLink, and generic embedding block.
 * Blocks related to course structure and progress monitoring: Progress in paragraph/course, task listing, learning goals, course material authors 
 
-*Exercise Types*
+## Exercise Types
 
 The online learning environment includes several types of tasks that can be embedded into the course material. For example, the following types of tasks can be created for online courses:
 * Multi-choice: In a multiple-choice task, the student selects one or more of the pre-defined response options.
@@ -22,23 +22,23 @@ The online learning environment includes several types of tasks that can be embe
 * Short answer: The student answers briefly, often in one word. The answer given by the student is compared to the model answer.
 * Timeline: The student connects the right event to the right year on the right timeline.
 
-*Automatic task check*
+## Automatic task check
 
 In the MOOC learning environment, it is possible to set the number of points required to get through the course and the number of tasks attempted. When a student exceeds the pass limits, the course is automatically marked as passed by him.
 
-*Certificates*
+## Certificates
 
 In the learning environment, you can add a certificate that students will receive after completing the course. The certificate base you create in the image processing program is brought into the learning environment and automatically supplemented with the student’s name, date, and a verification link that the student can share.
 
-*Source Reference Manager*
+## Source Reference Manager
 
 The learning environment includes a source reference management tool that allows references to be embedded into course material so that they do not interfere with text readability.
 
-*Glossary*
+## Glossary
 
 In the learning environment, you can create a list of abbreviations and other terms that are present in the material. The terms defined in the vocabulary are highlighted in the material automatically and when the student moves the cursor over the highlighted word, he is shown the definition of the term.
 
-*Statistics*
+## Statistics
 
 A number of course-related statistics can be viewed from the course management view. For example:
 * How many students have tried to do what.
@@ -48,18 +48,18 @@ A number of course-related statistics can be viewed from the course management v
 * List of the most popular pages.
 * Background information on devices: for which type of device (computer/mobile), operating system and browser the course material is used.
 
-*Feedback and amendments*
+## Feedback and amendments
 
 Students may submit feedback or suggestions for changes to a specific point of the course. Students can highlight a single word or several paragraphs from the material and then leave verbal feedback or even suggest a correction for a typing error or unclear formatting. The teacher can compare the proposed change in parallel with the original text and accept the change in one click.
 
-*Language versions*
+## Language versions
 
 You can create parallel language versions of the course material.
 
-*Course Institutions*
+## Course Institutions
 
 Separate score lists can be created in the course material for students from different educational institutions, for example. Students will select the version they have completed at the beginning of the course.
 
-*SISU Integration*
+## SISU Integration
 
 Courses studied in the MOOC Centre’s online learning environment can be recorded as credits of the University of Helsinki in the SISU system.
