--- a/frontend/public/md_pages/information/learning_environment_fi.mdx
+++ b/frontend/public/md_pages/information/learning_environment_fi.mdx
@@ -4,7 +4,7 @@ MOOC-keskuksen verkko-oppimisympäristön käyttäminen on helppoa. Oppimisympä
 
 Verkko-oppimisympäristössä käytössäsi ovat seuraavat ominaisuudet:
 
-*Editointityökalut*
+## Editointityökalut
 
 Kurssimateriaalin lisääminen ja muokkaaminen perustuu lohkoihin, joita voit siirrellä sivulla. Kurssimateriaalin rakentaminen oppimisympäristöön on suoraviivaista, visuaalista, eikä vaadi ohjelmointiosaamista.
 
@@ -15,7 +15,7 @@ Oppimisympäristössä on käytössä esimerkiksi seuraavanlaisia lohkoja:
 * Upotukset: X (entinen Twitter), YouTube, Spotify, Vimeo, Mentimeter, ThingLink, sekä geneerinen upotuslohko.
 * Kurssin rakenteeseen ja edistymisseurantaan liittyvät lohkot: Edistyminen kappaleessa / kurssilla, tehtävälistaus, oppimistavoitteet, kurssinmateriaalin laatijat
 
-*Tehtävätyypit*
+## Tehtävätyypit
 
 Verkko-oppimisympäristö sisältää useita tehtävätyyppejä, joita voi upottaa kurssimateriaalin joukkoon. Verkkokursseille voidaan luoda esimerkiksi seuraavanlaisia tehtäviä:
 * Monivalinta: Monivalintatehtävässä opiskelija valitsee yhden tai useamman ennalta määritellyistä vastausvaihtoehdoista.
@@ -23,23 +23,23 @@ Verkko-oppimisympäristö sisältää useita tehtävätyyppejä, joita voi upott
 * Lyhytvastaus: Opiskelija vastaa lyhyesti, usein yhdellä sanalla. Opiskelijan antamaa vastausta verrattaan mallivastaukseen.
 * Aikajana: Opiskelija yhdistää oikean tapahtuman oikeaan vuoteen aikajanalla.
 
-*Automaattinen tehtävien tarkistus*
+## Automaattinen tehtävien tarkistus
 
 Verkko-oppimisympäristössä on mahdollista asettaa kurssin läpipääsyyn vaadittava pistemäärä ja yritettyjen tehtävien määrä. Kun opiskelija ylittää läpäisyrajat, kurssi merkitään hänelle automaattisesti läpäistyksi.
 
-*Sertifikaatit*
+## Sertifikaatit
 
 Oppimisympäristöön voi lisätä sertifikaatin, jonka opiskelijat saavat läpäistyään kurssin. Kuvankäsittelyohjelmassa luomasi sertifikaattipohja tuodaan oppimisympäristöön ja sen päälle täydennetään automaattisesti opiskelijan nimi, päivämäärä, sekä varmennuslinkki, jonka opiskelija voi jakaa eteenpäin.
 
-*Lähdeviittausten hallinta*
+## Lähdeviittausten hallinta
 
 Oppimisympäristö sisältää lähdeviittausten hallintatyökalun, jonka avulla viittaukset voidaan upottaa osaksi kurssimateriaalia niin, etteivät ne häiritse tekstin luettavuutta.
 
-*Sanasto*
+## Sanasto
 
 Oppimisympäristössä voi luoda listan lyhenteistä ja muista termeistä, joita materiaalissa esiintyy. Sanastoon määritellyt termit korostetaan materiaalissa automaattisesti ja kun opiskelija siirtää kursorin korostetun sanan päälle, hänelle näytetään termin määritelmä.
 
-*Tilastot*
+## Tilastot
 
 Kurssin hallintanäkymästä voi tarkastella useita kurssiin liittyviä tilastoja. Esimerkiksi:
 * Kuinka moni opiskelija on yrittänyt mitäkin tehtävää.
@@ -49,18 +49,18 @@ Kurssin hallintanäkymästä voi tarkastella useita kurssiin liittyviä tilastoj
 * Lista suosituimmista sivuista.
 * Taustatietoa laitteista: millä laitetyypille (tietokone / mobiili), käyttöjärjestelmällä ja selaimella kurssimateriaalia käytetään.
 
-*Palaute ja muutosehdotukset*
+## Palaute ja muutosehdotukset
 
 Opiskelijat voivat jättää palautetta tai muutosehdotuksia kurssin tiettyyn kohtaan. Opiskelija voi korostaa materiaalista yksittäisen sanan tai useita kappaleita ja jättää sitten sanallista palautetta tai vaikka ehdottaa korjausehdotusta lyöntivirheelle tai epäselvälle muotoilulle. Opettaja voi verrata ehdotettua muutosta rinnakkain alkuperäisen tekstin kanssa ja hyväksyä muutoksen yhdellä klikkauksella.
 
-*Kieliversiot*
+## Kieliversiot
 
 Kurssimateriaalista voi luoda rinnakkaisia kieliversioita.
 
-*Kurssi-instanssit*
+## Kurssi-instanssit
 
 Kurssimateriaaliin voi luoda erillisiä pistelistoja esimerkiksi eri oppilaitosten opiskelijoille. Opiskelijat valitsevat suorittamansa version kurssin alussa.
 
-*SISU-integraatio*
+## SISU-integraatio
 
 MOOC-keskuksen verkko-oppimisympäristössä opiskellut kurssisuoritukset voidaan kirjata Helsingin yliopiston opintopisteiksi SISU-järjestelmään.
