--- a/frontend/public/md_pages/information/about_us_en.mdx
+++ b/frontend/public/md_pages/information/about_us_en.mdx
@@ -4,24 +4,16 @@ One of the strategic choices of the University of Helsinki is "Science and learn
 
 The online learning environment is developed by an innovative developer team, which includes both experienced researchers, software designers, educational technology and open teaching professionals as well as students of computer science at the University of Helsinki. This allows us to bring diverse expertise to development and implement the best ideas. The learning environment is developed using agile software development methods.
 
-<br />
-
-*Contact us!*
-
-<br />
+## Contact us!
 
 Technical issues and problem situations: [mooc@cs.helsinki.fi](mailto:mooc@cs.helsinki.fi)
 
-<br />
-
 Emails are: firstname.surname@helsinki.fi
-
-<br />
 
 [Mika Tompuri](https://www.helsinki.fi/en/about-us/people/people-finder/mika-tompuri-9411181)<br />
 New courses, collaboration with educational institutions
 
-[Henrik Nygren](https://www.helsinki.fi/en/about-us/people/people-finder/henrik-nygren-9363993)<br />
+[Henrik Nygren](https://github.com/nygrenh)<br />
 Software development
 
 [Leo Leppänen](https://researchportal.helsinki.fi/en/persons/leo-leppänen)<br />
