--- a/frontend/public/md_pages/information/teachers_fi.mdx
+++ b/frontend/public/md_pages/information/teachers_fi.mdx
@@ -1,6 +1,6 @@
 # Opettajalle
 
-*Luo oma kurssisi helposti ja nopeasti*
+## Luo oma kurssisi helposti ja nopeasti
 
 MOOC-keskuksen verkko-oppimisympäristö sopii alustaksi kaikille avoimille verkkokursseille. Erityisesti laajoja oppijajoukkoja kiinnostavat kurssit hyötyvät oppimisympäristön automaatio-ominaisuuksista: monet asiat vastausten arvioinnista aina suoritusten ja opintopisteiden siirtämiseen Helsingin yliopiston opintorekisteriin voidaan hoitaa pitkälti automaattisesti. Oppimisympäristö on rakennettu myös niin, että kursseilla tehtävä tutkimus onnistuu helposti.
 
