--- a/frontend/public/md_pages/faq/registering_completions_fi.mdx
+++ b/frontend/public/md_pages/faq/registering_completions_fi.mdx
@@ -28,7 +28,7 @@ Jotta voit saada kurssista opintopisteet, sinun täytyy ensin ilmoittautua kurss
 
 Kun suoritus ja opintopisteet on rekisteröity sinulle, näet suorituksesi tiedot <Link href="https://opintopolku.fi/oma-opintopolku/" target="_blank">Oma opintopolku-palvelusta</Link>. Omasta opintopolusta voit välittää suoritustietosi omaan korkeakouluusi opintojen hyväksilukua varten. Omaan opintopolkuun kirjaudutaan pankkitunnuksilla.
 
-Mikäli Oma Opintopolkupalvelun tiedot eivät oikeuta suorituksenhyväksilukuun omassa korkeakoulussasi, voit tilata virallisen opintorekisteriotteen osoitteesta <a href="mailto:avoin-student@helsinki.fi" />. Muista ilmoittaa seuraavat tiedot opintorekisteriotetta tilatessasi:
+Mikäli Oma Opintopolkupalvelun tiedot eivät oikeuta suorituksenhyväksilukuun omassa korkeakoulussasi, voit tilata virallisen opintorekisteriotteen osoitteesta <Link a href="mailto:avoin-student@helsinki.fi" target="_blank">avoin-student@helsinki.fi</Link>. Muista ilmoittaa seuraavat tiedot opintorekisteriotetta tilatessasi:
 
 * Kurssin nimi,
 * oma nimesi,
