Fix link in about_us_en.mdx

--- a/frontend/public/md_pages/information/about_us_en.mdx
+++ b/frontend/public/md_pages/information/about_us_en.mdx
@@ -19,5 +19,5 @@ Software development
 [Leo Leppänen](https://researchportal.helsinki.fi/en/persons/leo-leppänen)<br />
 Research
 
-[Ulla Hemminki-Reijonen](https:/www.helsinki.fi/en/about-us/people/people-finder/ulla-hemminki-reijonen-9094291)<br />
+[Ulla Hemminki-Reijonen](https://www.helsinki.fi/en/about-us/people/people-finder/ulla-hemminki-reijonen-9094291)<br />
 MOOC Centre management, company collaboration
