--- a/frontend/public/md_pages/information/about_us_fi.mdx
+++ b/frontend/public/md_pages/information/about_us_fi.mdx
@@ -19,5 +19,8 @@ Ohjelmistokehitys
 [Leo Leppänen](https://researchportal.helsinki.fi/fi/persons/leo-leppänen)<br />
 Tutkimus
 
+[YC Felin](https://www.helsinki.fi/fi/tutustu-meihin/ihmiset/henkilohaku/yc-felin-9086219)<br />
+Yritysyhteistyö
+
 [Ulla Hemminki-Reijonen](https://www.helsinki.fi/fi/tutustu-meihin/ihmiset/henkilohaku/ulla-hemminki-reijonen-9094291)<br />
-MOOC-keskuksen johto, yritysyhteistyö
+MOOC-keskuksen johto
