--- a/frontend/public/md_pages/information/about_us_en.mdx
+++ b/frontend/public/md_pages/information/about_us_en.mdx
@@ -19,5 +19,8 @@ Software development
 [Leo Leppänen](https://researchportal.helsinki.fi/en/persons/leo-leppänen)<br />
 Research
 
+[YC Felin](https://www.helsinki.fi/en/about-us/people/people-finder/yc-felin-9086219)<br />
+Company collaboration
+
 [Ulla Hemminki-Reijonen](https://www.helsinki.fi/en/about-us/people/people-finder/ulla-hemminki-reijonen-9094291)<br />
-MOOC Centre management, company collaboration
+MOOC Center management
