--- a/frontend/public/md_pages/installation/netbeans_installation_macOS_en.mdx
+++ b/frontend/public/md_pages/installation/netbeans_installation_macOS_en.mdx
@@ -30,9 +30,9 @@ Follow the instructions below to install
 
 ### 1.Installing Java <a name="javan-asentaminen"></a>
 
-1. Download the open development environment for Java 11, AdoptOpenJDK11, from [https://adoptopenjdk.net](https://adoptopenjdk.net/?variant=openjdk11&jvmVariant=hotspot).
+1. Download the open development environment for Java 11, AdoptOpenJDK11, from [https://adoptopenjdk.net](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
 
-2. Select OpenJDK 11 (LTS) and HotSpot. Then click the "Latest release" button to download Java.
+2. The page should be filtered to only show installation packages for macOS, for package type JDK and version 11 - LTS. Select the correct installer for your operating system's architecture type , and download the installation file with the .pkg-button.
 
 3. When the download is complete, open the installation file.
 
