--- a/frontend/public/md_pages/installation/netbeans_installation_macOS_fi.mdx
+++ b/frontend/public/md_pages/installation/netbeans_installation_macOS_fi.mdx
@@ -29,9 +29,9 @@ Seuraa allaolevia ohjeita ja asenna koneellesi
 
 ### 1.Javan asentaminen <a name="javan-asentaminen"></a>
 
-1. Lataa Java 11:n avoin kehitysympäristö AdoptOpenJDK11 osoitteesta [https://adoptopenjdk.net](https://adoptopenjdk.net/?variant=openjdk11&jvmVariant=hotspot).
+1. Lataa Java 11:n avoin kehitysympäristö AdoptOpenJDK11 osoitteesta [https://adoptopenjdk.net](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
 
-2. Valitse sivulta OpenJDK 11 (LTS) ja HotSpot. Sitten voit painaa Latest release -nappia ladataksesi Javan.
+2. Sivulla pitäisi olla valmiiksi suodatettuna vain macOS-käyttöjärjestelmälle pakettityypin JDK versio 11 - LTS. Valitse asennettavista paketeista oman käyttöjärjestelmäsi arkkitehtuurin mukainen asennuspaketti, ja lataa asennustiedosto .pkg-napista.
 
 3. Kun olet ladannut asennustiedoston, avaa se.
 
