--- a/frontend/public/md_pages/installation/vscode_installation_Windows_fi.mdx
+++ b/frontend/public/md_pages/installation/vscode_installation_Windows_fi.mdx
@@ -13,14 +13,14 @@ import TableOfContents from "/public/md_pages/installation/sisallysluettelo_vsco
 </ContentBox>
 
 <ContentBox>
-Seuraa alla olevia ohjeita asentaaksesi Visual Studio Code (VS Code) ja TestMyCode (TMC) -laajennus VS Codeen. 
+Seuraa alla olevia ohjeita asentaaksesi Visual Studio Code (VS Code) ja TestMyCode (TMC) -laajennus VS Codeen.
 
-Tarvitset järjestelmävalvojaoikeudet tietokoneellesi asentaaksesi tarvittavat ohjelmat.  
+Tarvitset järjestelmävalvojaoikeudet tietokoneellesi asentaaksesi tarvittavat ohjelmat.
 Mikäli sinulla on käytössäsi Tietojenkäsittelytieteen osaston laite, voit siirtyä suoraan [TestMyCode -laajennuksen asentamiseen](#TestMyCode-asentaminen).
 
-###  isual Studio Coden asentaminen <a name="VSCoden-asentaminen"></a>
+###  Visual Studio Coden asentaminen <a name="VSCoden-asentaminen"></a>
 
-Kurssia varten tulisi asentamaan Visual Studio Code alla olevan linkin takaa. Visual Studio Code ei ole sama ohjelma kuin Microsoft Visual Studio.  
+Kurssia varten tulisi asentamaan Visual Studio Code alla olevan linkin takaa. Visual Studio Code ei ole sama ohjelma kuin Microsoft Visual Studio.
 
 1. Lataa Windowsin asennusohjelma osoitteesta [https://code.visualstudio.com/download](https://code.visualstudio.com/download)
 2. Kun tiedoston lataaminen on valmis, tuplaklikkaa tiedostoa avataksesi asennusohjelma.
@@ -28,9 +28,9 @@ Kurssia varten tulisi asentamaan Visual Studio Code alla olevan linkin takaa. Vi
 
 ### TestMyCode-laajennuksen asentaminen VS Codeen <a name="TestMyCode-asentaminen"></a>
 
-1. Avaa Visual Studio Code ohjelma.  
-2. Ohjelman vasemmassa sivupalkissa näkyy ikoneita, valitse sieltä Extensions -näkymä (kuvassa kohta 1).  
-3. Kirjoita hakukenttään **TestMyCode** (kuvassa kohta 2).  
+1. Avaa Visual Studio Code ohjelma.
+2. Ohjelman vasemmassa sivupalkissa näkyy ikoneita, valitse sieltä Extensions -näkymä (kuvassa kohta 1).
+3. Kirjoita hakukenttään **TestMyCode** (kuvassa kohta 2).
 4. Valitse **TestMyCode** hakutuloksesta.
 5. Paina "Install" -painiketta (kuvassa kohta 3).
 
@@ -44,14 +44,14 @@ Ensimmäisen käynnistyksen yhteydessä laajennus lataa sen tarvitsemat komponen
 
 ### Python-ympäristön asentaminen <a name="python-asentaminen"></a>
 
-Python-ohjelmointikursseilla tarvitset Python3:a ja Python-laajennusta Visual Studio Codeen suorittaaksesi lähdekoodia.  
+Python-ohjelmointikursseilla tarvitset Python3:a ja Python-laajennusta Visual Studio Codeen suorittaaksesi lähdekoodia.
 Saat asennettua nämä käyttöösi seuraamalla näitä ohjeita.
 
 #### Pythonin asentaminen <a name="python3"></a>
 
 1. Mene osoitteeseen [https://www.python.org/downloads/](https://www.python.org/downloads/)
 2. Lataa viimeisin saatavilla oleva versio Python 3:sta.
-3. Käynnistä asennus tuplaklikkaamalla asennustiedostoa. 
+3. Käynnistä asennus tuplaklikkaamalla asennustiedostoa.
 4. Valitse asennusvaiheessa "Add Python 3.x to PATH" (kuvassa kohta 1).
 5. Valitse "Install now" (kuvassa kohta 2).
 6. Kun asennus on valmis, voit sulkea asennusikkunan.
@@ -73,15 +73,15 @@ Saat asennettua nämä käyttöösi seuraamalla näitä ohjeita.
 
 ### Java-ympäristön asentaminen <a name="javan-asentaminen"></a>
 
-Java ohjelmointikursseilla tarvitset Java kehitys- ja suoritusympäristön, Java laajennuksen Visual Studio Codeen ja Mavenin.  
+Java ohjelmointikursseilla tarvitset Java kehitys- ja suoritusympäristön, Java laajennuksen Visual Studio Codeen ja Mavenin.
 Saat asennettua nämä käyttöösi seuraamalla ohjeita alla.
 
 #### Javan asentaminen <a name="adopt-open-jdk"></a>
 
-1. Lataa Java 11:n avoin kehitys- ja suoritusympäristö AdoptOpenJDK11 osoitteesta [https://adoptopenjdk.net](https://adoptopenjdk.net/?variant=openjdk11&jvmVariant=hotspot).
-2. Valitse sivulta OpenJDK 11 (LTS) ja HotSpot. Sitten voit painaa Latest release -nappia ladataksesi Javan.
+1. Lataa Java 11:n avoin kehitys- ja suoritusympäristö AdoptOpenJDK11 osoitteesta [https://adoptopenjdk.net](https://adoptium.net/temurin/releases/?os=windows&version=11&package=jdk).
+2. Sivulla pitäisi olla valmiiksi suodatettuna vain Windows-käyttöjärjestelmälle pakettityypin JDK versio 11 - LTS. Valitse asennettavista paketeista oman käyttöjärjestelmäsi arkkitehtuurin mukainen asennuspaketti (x64 jos käyttöjärjestelmäsi on 64-bittinen, x86 jos käyttöjärjestelmäsi on 32-bittinen), ja lataa asennustiedosto .msi-napista.
 
-**HUOM!** Kun asennat Javaa lataamastasi asennustiedostosta, aseta Custom Setup -vaiheessa sekä "Set JAVA_HOME variable" (kuva 1, kohta 1) että "JavaSoft (Oracle) registry keys" -kohtiin (kuva 2, kohta 2) "Entire feature will be installed on local hard drive".  
+**HUOM!** Kun asennat Javaa lataamastasi asennustiedostosta, aseta Custom Setup -vaiheessa sekä "Set JAVA_HOME variable" (kuva 1, kohta 1) että "JavaSoft (Oracle) registry keys" -kohtiin (kuva 2, kohta 2) "Entire feature will be installed on local hard drive".
 Kun nämä on asetettu, paina "Next" (kuva 2, kohta 3).
 
 ![AdoptOpenJDK:n asennusohjelman Custom Setup -vaihe, jossa asetetaan Set JAVA_HOME variable -kohtaan vaihtoehto Entire feature will be installed on local hard drive](vscode/adoptopenjdk-set-java-home.webp)
@@ -105,16 +105,16 @@ Tarvitset Java-laajennuksen Visual Studio Codessa, jotta voit kääntää ja suo
 
 #### Mavenin asentaminen ja asetusten määrittäminen <a name="maven-ja-asetukset"></a>
 
-Saat asennettua Mavenin seuraamalla alla olevia ohjeita.  
+Saat asennettua Mavenin seuraamalla alla olevia ohjeita.
 
 1. Lataa viimeisin Binary zip archive, `apache-maven-3.x.y-bin.zip`, osoitteesta [https://maven.apache.org/download.cgi](https://maven.apache.org/download.cgi).
 2. Pura arkisto haluaamaasi paikkaan, esim. `C:\Program Files\`, tämä luo automaattisesti kansion `apache-maven-3.x.y` purkamaasi paikkaan.
 3. Mikäli asensit Java laajennuksen VS Codeen, tämän mukana tulee `Maven for Java` lisäosa. Aseta Maven polku kyseisen lisäosan asetuksiin seuraavasti:
     * Avaa Visual Studio Code
     * Paina ylhäältä "File -> Preferences -> Settings" tai näppäimistössä pikanäppäintä kyseiselle toiminnallisuudelle: `CTRL + ,`
-    * Etsi `maven.executable.path` (kuvassa 1) ja aseta Maven polku (kuvassa 2) seuraavasti:  
-    `<purkamasi paikka>\apache-maven-3.x.y\bin\mvn.cmd`  
-    esim. Versio 3.6.3 Mavenista purettuna C:\Program Files\ alle olisi asetettuna seuraavasti:  
+    * Etsi `maven.executable.path` (kuvassa 1) ja aseta Maven polku (kuvassa 2) seuraavasti:
+    `<purkamasi paikka>\apache-maven-3.x.y\bin\mvn.cmd`
+    esim. Versio 3.6.3 Mavenista purettuna C:\Program Files\ alle olisi asetettuna seuraavasti:
     `C:\Program Files\apache-maven-3.6.3\bin\mvn.cmd`
 
     ![Mavenin tiedostopolun asettaminen](vscode/maven_executable_path.webp)
