Clarify jdk-installer options

--- a/frontend/public/md_pages/installation/netbeans_installation_macOS_en.mdx
+++ b/frontend/public/md_pages/installation/netbeans_installation_macOS_en.mdx
@@ -30,9 +30,13 @@ Follow the instructions below to install
 
 ### 1.Installing Java <a name="javan-asentaminen"></a>
 
-1. Download the open development environment for Java 11, AdoptOpenJDK11, from [https://adoptopenjdk.net](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
+1. Download the open development environment for Java 11, OpenJDK11, from [https://adoptium.net/](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
+  - The page should be filtered to only show installation packages for macOS, for package type JDK and version 11 - LTS.
+  - Select the aarch64 or x64 installer based on your macOS version. You can determine the correct version from the Apple icon menu --> choose "About This Mac"
+    - If your Chip is M1, M2 or M3 then you should select the aarch64 installer.
+    - If your Chip is Intel, then you should select the x64 installer.
 
-2. The page should be filtered to only show installation packages for macOS, for package type JDK and version 11 - LTS. Select the correct installer for your operating system's architecture type , and download the installation file with the .pkg-button.
+2. Download the installation file with the .pkg-button.
 
 3. When the download is complete, open the installation file.
 
