--- a/frontend/public/md_pages/installation/netbeans_installation_Windows_fi.mdx
+++ b/frontend/public/md_pages/installation/netbeans_installation_Windows_fi.mdx
@@ -29,9 +29,14 @@ Seuraa allaolevia ohjeita ja asenna koneellesi
 
 ### Javan asentaminen <a name="javan-asentaminen"></a>
 
-Lataa Java 11:n avoin kehitysympäristö AdoptOpenJDK11 osoitteesta [https://adoptopenjdk.net](https://adoptium.net/temurin/releases/?os=windows&version=11&package=jdk).
+1. Lataa Java 11:n avoin kehitys- ja suoritusympäristö OpenJDK11 osoitteesta [https://adoptium.net/](https://adoptium.net/temurin/releases/?os=windows&version=11&package=jdk).
+- Sivulla pitäisi olla valmiiksi suodatettuna vain Windows-käyttöjärjestelmälle pakettityypin JDK versio 11 - LTS.
+- Valitse asennettavista paketeista oman käyttöjärjestelmäsi arkkitehtuurin mukainen asennuspaketti
+    - x64 jos käyttöjärjestelmäsi on 64-bittinen.
+    - x86 jos käyttöjärjestelmäsi on 32-bittinen.
+    - Voit tarkistaa käyttöjärjestelmäsi version painamalla Start-nappia, valitsemalla Settings --> System --> About. Device specifications:in alta pitäisi löytyä "System type".
 
-Sivulla pitäisi olla valmiiksi suodatettuna vain Windows-käyttöjärjestelmälle pakettityypin JDK versio 11 - LTS. Valitse asennettavista paketeista oman käyttöjärjestelmäsi arkkitehtuurin mukainen asennuspaketti (x64 jos käyttöjärjestelmäsi on 64-bittinen, x86 jos käyttöjärjestelmäsi on 32-bittinen), ja lataa asennustiedosto .msi-napista.
+2. Lataa asennustiedosto .msi-napista.
 
 **HUOM!** Kun asennat Javaa lataamastasi asennustiedostosta, aseta Custom Setup -vaiheessa sekä "Set JAVA_HOME variable" että "JavaSoft (Oracle) registry keys" -kohtiin "Entire feature will be installed on local hard drive". (katso allaolevat kuvat)
 
