--- a/frontend/public/md_pages/installation/netbeans_installation_macOS_fi.mdx
+++ b/frontend/public/md_pages/installation/netbeans_installation_macOS_fi.mdx
@@ -29,9 +29,13 @@ Seuraa allaolevia ohjeita ja asenna koneellesi
 
 ### 1.Javan asentaminen <a name="javan-asentaminen"></a>
 
-1. Lataa Java 11:n avoin kehitysympäristö AdoptOpenJDK11 osoitteesta [https://adoptopenjdk.net](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
+1. Lataa Java 11:n avoin kehitysympäristö OpenJDK11 osoitteesta [https://adoptium.net/](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
+  - Sivulla pitäisi olla valmiiksi suodatettuna vain macOS-käyttöjärjestelmälle pakettityypin JDK versio 11 - LTS.
+  - Valitse aarch64 tai x64 asennustiedosto macOS-versiosi perusteella. Voit varmistaa oikean version Apple-valikosta --> valitse "About This Mac"
+    - Jos Chip-kohdassa lukee M1, M2 tai M3, valitse aarch64-asennustiedosto.
+    - Jos Chip-kohdassa lukee Intel, valitse x64-asennustiedosto.
 
-2. Sivulla pitäisi olla valmiiksi suodatettuna vain macOS-käyttöjärjestelmälle pakettityypin JDK versio 11 - LTS. Valitse asennettavista paketeista oman käyttöjärjestelmäsi arkkitehtuurin mukainen asennuspaketti, ja lataa asennustiedosto .pkg-napista.
+2. Lataa asennustiedosto .pkg-napista.
 
 3. Kun olet ladannut asennustiedoston, avaa se.
 
