--- a/frontend/public/md_pages/installation/vscode_installation_Windows_en.mdx
+++ b/frontend/public/md_pages/installation/vscode_installation_Windows_en.mdx
@@ -14,14 +14,14 @@ import TableOfContents from "/public/md_pages/installation/sisallysluettelo_vsco
 
 
 <ContentBox>
-Follow the instructions below to download Visual Studio Code (VS Code) and TestMyCode (TMC) extension for VS Code. 
+Follow the instructions below to download Visual Studio Code (VS Code) and TestMyCode (TMC) extension for VS Code.
 
-You need to have administrator priviledges on your computer to install the necessary programs.  
+You need to have administrator priviledges on your computer to install the necessary programs.
 If you are using a computer provided by the computer science department you can skip directly to [Installing TestMyCode extension](#installing-tmc) section.
 
 ###  Installing Visual Studio Code <a name="installing-vscode"></a>
 
-Please install Visual Studio Code from the link below. Visual Studio Code is not the same program as Microsoft Visual Studio.  
+Please install Visual Studio Code from the link below. Visual Studio Code is not the same program as Microsoft Visual Studio.
 
 1. Download the Windows installation file from [https://code.visualstudio.com/download](https://code.visualstudio.com/download).
 2. Once download is completed, double-click the file to open it.
@@ -29,11 +29,11 @@ Please install Visual Studio Code from the link below. Visual Studio Code is not
 
 ### Installing TestMyCode Extension for VS Code <a name="installing-tmc"></a>
 
-1. Open Visual Studio Code.  
-2. At the left you can see icons, choose the Extension view (see picture point 1).  
-3. Type **TestMyCode** in the search field (see picture point 2).  
+1. Open Visual Studio Code.
+2. At the left you can see icons, choose the Extension view (see picture point 1).
+3. Type **TestMyCode** in the search field (see picture point 2).
 4. Press the search result **TestMyCode**.
-5. Press "Install" (see picture point 3).  
+5. Press "Install" (see picture point 3).
 
 The first initilization of the extension will download some necessary components (this will take a while).
 ![Installing the TMC extension for VS Code](vscode/download_extension.webp)
@@ -44,14 +44,14 @@ The first initilization of the extension will download some necessary components
 
 ### Installing Python environment <a name="installing-python"></a>
 
-For courses using Python you will need Python and Python Extension for VS Code to run your source code.  
+For courses using Python you will need Python and Python Extension for VS Code to run your source code.
 Please install Python following the instructions below.
 
 #### Installing Python <a name="python3"></a>
 
 1. Go to [https://www.python.org/downloads/](https://www.python.org/downloads/)
 2. Download the latest version of Python 3.
-3. Double-click the installation file to start the installation. 
+3. Double-click the installation file to start the installation.
 4. Make sure you choose "Add Python 3.x to PATH" (see picture point 1).
 5. Choose "Install now" (see picture point 2).
 6. Once installation is completed, you can close the install window.
@@ -73,15 +73,21 @@ Please install Python following the instructions below.
 
 ### Installing Java environment <a name="java-environment"></a>
 
-For courses using Java you will need Java Development kit & Runtime Environment, Java Extension Pack for Visual Studio Code and Maven to build and run your source code.  
+For courses using Java you will need Java Development kit & Runtime Environment, Java Extension Pack for Visual Studio Code and Maven to build and run your source code.
 Please install Java following the instructions below.
 
 #### Installing Java <a name="adopt-open-jdk"></a>
 
-1. Download AdoptOpenJDK11, open development and runtime environment for Java 11, from [https://adoptopenjdk.net](https://adoptopenjdk.net/?variant=openjdk11&jvmVariant=hotspot).
-2. Select OpenJDK 11 (LTS) and HotSpot. Then click "Latest release" to download Java.
+1. Download OpenJDK11, open development environment for Java 11, from [https://adoptium.net/](https://adoptium.net/temurin/releases/?os=windows&version=11&package=jdk).
+- The page should be filtered to only show installation packages for Windows, for package type JDK and version 11 - LTS.
+- Select the correct installer for your operating system's architecture type
+  - x64 for 64-bit operating system
+  - x86 for 32-bit operating system
+  - You can check which architecture type your operating system is from the Start menu by selecting Settings --> System --> About. Under Device specifications you should find "System type".
 
-**NB!** When installing Java with the installation file you just downloaded, in the Custom Setup phase set both "Set JAVA_HOME variable" (pic 1, step 1) and "JavaSoft (Oracle) registry keys" (pic 2, step 2) to "Entire feature will be installed on local hard drive" (see the images below).  
+2. Download the installation file with the .msi-button.
+
+**NB!** When installing Java with the installation file you just downloaded, in the Custom Setup phase set both "Set JAVA_HOME variable" (pic 1, step 1) and "JavaSoft (Oracle) registry keys" (pic 2, step 2) to "Entire feature will be installed on local hard drive" (see the images below).
 Once you have chosen these, press "Next" (pic 2, step 3).
 
 ![Custom Setup phase of AdoptOpenJDK installer, where Set JAVA_HOME variable is set to Entire feature will be installed on local hard drive.](vscode/adoptopenjdk-set-java-home.webp)
@@ -104,16 +110,16 @@ You will need Java Extension Pack for Visual Studio Code to compile and run your
 
 #### Installing Maven and configuring settings <a name="maven-configuring"></a>
 
-You can install Maven by following the instructions below.  
+You can install Maven by following the instructions below.
 
 1. Download the latest Binary zip archive, `apache-maven-3.x.y-bin.zip`, from [https://maven.apache.org/download.cgi](https://maven.apache.org/download.cgi).
 2. Extract the archive to your desired location, e.g. `C:\Program Files\`, this will create automatically a folder named `apache-maven-3.x.y`.
 3. If you installed the Java Extension Pack in VS Code, it comes with `Maven for Java`. Set Maven path in this extension as below:
     * Open Visual Studio Code
     * Press at top left "File -> Preferences -> Settings" or use the hotkey: `CTRL + ,`
-    * Find `maven.executable.path` (pic below 1.) and set Maven path (pic below 2.) as:  
-    `<your extracted location\apache-maven-3.x.y\bin\mvn.cmd`  
-    for example with version 3.6.3 of Maven extracted to C:\Program Files the path would be:  
+    * Find `maven.executable.path` (pic below 1.) and set Maven path (pic below 2.) as:
+    `<your extracted location\apache-maven-3.x.y\bin\mvn.cmd`
+    for example with version 3.6.3 of Maven extracted to C:\Program Files the path would be:
     `C:\Program Files\apache-maven-3.6.3\bin\mvn.cmd`
 
     ![Setting the Maven executable path](vscode/maven_executable_path.webp)
