--- a/frontend/public/md_pages/installation/vscode_installation_macOS_en.mdx
+++ b/frontend/public/md_pages/installation/vscode_installation_macOS_en.mdx
@@ -13,9 +13,9 @@ import TableOfContents from "/public/md_pages/installation/sisallysluettelo_vsco
 </ContentBox>
 
 <ContentBox>
-Follow the instructions below to download Visual Studio Code (VSCode) and TestMyCode (TMC) extension for VSCode. 
+Follow the instructions below to download Visual Studio Code (VSCode) and TestMyCode (TMC) extension for VSCode.
 
-You need to have administrator priviledges on your computer to install the necessary programs.  
+You need to have administrator priviledges on your computer to install the necessary programs.
 If you are using a computer provided by the computer science department you can skip directly to [Installing TestMyCode extension](#installing-tmc) section.
 
 ###  Installing Visual Studio Code <a name="installing-vscode"></a>
@@ -26,11 +26,11 @@ If you are using a computer provided by the computer science department you can 
 
 ### Installing TestMyCode Extension for VS Code <a name="installing-tmc"></a>
 
-1. Open Visual Studio Code.  
-2. At the left you can see icons, choose the Extension view (see picture point 1).  
-3. Type **TestMyCode** in the search field (see picture point 2).  
+1. Open Visual Studio Code.
+2. At the left you can see icons, choose the Extension view (see picture point 1).
+3. Type **TestMyCode** in the search field (see picture point 2).
 4. Press the search result **TestMyCode**.
-5. Press "Install" (see picture point 3).  
+5. Press "Install" (see picture point 3).
 
 The first initilization of the extension will download some necessary components (this will take a while).
 ![Installing the TMC extension for VS Code](vscode/download_extension.webp)
@@ -41,7 +41,7 @@ The first initilization of the extension will download some necessary components
 
 ### Installing Python environment <a name="installing-python"></a>
 
-For courses using Python you will need Python and Python Extension for VS Code to run your source code.  
+For courses using Python you will need Python and Python Extension for VS Code to run your source code.
 Please install Python following the instructions below.
 
 #### Installing Python <a name="python3"></a>
@@ -67,13 +67,18 @@ Please install Python following the instructions below.
 
 ### Installing Java environment <a name="java-environment"></a>
 
-For courses using Java you will need Java Development kit & Runtime Environment, Java Extension Pack for Visual Studio Code and Maven to build and run your source code.  
+For courses using Java you will need Java Development kit & Runtime Environment, Java Extension Pack for Visual Studio Code and Maven to build and run your source code.
 Please install Java following the instructions below.
 
 #### Installing Java <a name="adopt-open-jdk"></a>
 
-1. Download the open development and runtime environment for Java 11, AdoptOpenJDK11, from [https://adoptopenjdk.net](https://adoptopenjdk.net/?variant=openjdk11&jvmVariant=hotspot).
-2. Select OpenJDK 11 (LTS) and HotSpot. Then click the "Latest release" button to download Java.
+1. Download the open development environment for Java 11, OpenJDK11, from [https://adoptium.net/](https://adoptium.net/temurin/releases/?os=mac&version=11&package=jdk).
+  - The page should be filtered to only show installation packages for macOS, for package type JDK and version 11 - LTS.
+  - Select the aarch64 or x64 installer based on your macOS version. You can determine the correct version from the Apple icon menu --> choose "About This Mac"
+    - If your Chip is M1, M2 or M3 then you should select the aarch64 installer.
+    - If your Chip is Intel, then you should select the x64 installer.
+
+2. Download the installation file with the .pkg-button.
 3. When the download is complete, open the installation file.
 4. Follow the installation instructions to install Java.
 
@@ -99,16 +104,16 @@ You will need Java Extension Pack for Visual Studio Code to compile and run your
 
 #### Installing Maven and configuring settings <a name="maven-configuring"></a>
 
-You can install Maven by following the instructions below.  
+You can install Maven by following the instructions below.
 
 1. Download the latest Binary zip archive, `apache-maven-3.x.y-bin.zip`, from [https://maven.apache.org/download.cgi](https://maven.apache.org/download.cgi).
 2. Extract the archive to your desired location, e.g. `/usr/local/`, this will create automatically a folder named `apache-maven-3.x.y`.
 3. If you installed the Java Extension Pack in VS Code, it comes with `Maven for Java`. Set Maven path in this extension as below:
     * Open Visual Studio Code
     * Press at top left "File -> Preferences -> Settings" or use the hotkey: `CTRL + ,`
-    * Find `maven.executable.path` (pic below 1.) and set Maven path (pic below 2.) as:  
-    `<your extracted location/apache-maven-3.x.y/bin/mvn`  
-    for example with version 3.6.3 of Maven extracted to `/usr/local/` the path would be:  
+    * Find `maven.executable.path` (pic below 1.) and set Maven path (pic below 2.) as:
+    `<your extracted location/apache-maven-3.x.y/bin/mvn`
+    for example with version 3.6.3 of Maven extracted to `/usr/local/` the path would be:
     `/usr/local/apache-maven-3.6.3/bin/mvn`
 
     ![Setting the Maven executable path](vscode/maven_executable_path.webp)
