--- a/frontend/public/md_pages/installation/ohjelmoinnin_aloittaminen_vscode_en.mdx
+++ b/frontend/public/md_pages/installation/ohjelmoinnin_aloittaminen_vscode_en.mdx
@@ -73,7 +73,7 @@ Make the following changes to the source code:
 <CodeBox>
 ```python
 editori = input("editori: ")
-if editor == "word" or editor == "notepad":
+if editori == "word" or editor == "notepad":
     print("surkea")
 ```
 </CodeBox>
