--- a/frontend/public/md_pages/information/learning_environment_en.mdx
+++ b/frontend/public/md_pages/information/learning_environment_en.mdx
@@ -2,6 +2,8 @@
 
 Using the MOOC Centre’s learning management system is easy. The learning environment is evolving rapidly, and new features are constantly being developed, both from the point of view of the MOOC Centre’s general features and for the needs of individual teachers or courses. The environment is particularly suitable for open self-study online courses.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JrzMmoZqnRs?si=wPCLKIaLY704rSfR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 In the MOOC platform, you have the following features:
 
 ## Editing Tools
