Embed demo video to FI learning environment page

--- a/frontend/public/md_pages/information/learning_environment_fi.mdx
+++ b/frontend/public/md_pages/information/learning_environment_fi.mdx
@@ -2,6 +2,8 @@
 
 MOOC-keskuksen verkko-oppimisympäristön käyttäminen on helppoa. Oppimisympäristö kehittyy vauhdilla ja uusia ominaisuuksia kehitetään koko ajan sekä MOOC-keskuksen verkko-oppimisympäristön näkökulmasta, että yksittäisten opettajien tai kurssien tarpeisiin.  Ympäristö sopii erityisesti avoimille itseopiskeltaville verkkokursseille.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JrzMmoZqnRs?si=wPCLKIaLY704rSfR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 Verkko-oppimisympäristössä käytössäsi ovat seuraavat ominaisuudet:
 
 ## Editointityökalut
