--- a/frontend/public/md_pages/information/teachers_en.mdx
+++ b/frontend/public/md_pages/information/teachers_en.mdx
@@ -2,7 +2,7 @@
 
 ## Create your own online course easily and quickly
 
-The MOOC Centre’s online learning management system is suitable as a platform for all open online courses. Courses that are of particular interest to large groups of learners benefit from the automation features of the learning environment: many things from the assessment of answers to the transfer of credits to the University of Helsinki study register can be handled automatically. The learning environment has also been built in such a way that the studies carried out in the courses can easily be done.
+The [MOOC Center’s online learning management system](/en/learning-environment) is suitable as a platform for all open online courses. Courses that are of particular interest to large groups of learners benefit from the automation features of the learning environment: many things from the assessment of answers to the transfer of credits to the University of Helsinki study register can be handled automatically. The learning environment has also been built in such a way that the studies carried out in the courses can easily be done.
 
 We also offer a versatile online learning environment for the educational needs of other educational institutions. We are happy to discuss this with you in more detail.
 
