Add link to learning environment page to Teacher page FI

--- a/frontend/public/md_pages/information/teachers_fi.mdx
+++ b/frontend/public/md_pages/information/teachers_fi.mdx
@@ -2,7 +2,7 @@
 
 ## Luo oma kurssisi helposti ja nopeasti
 
-MOOC-keskuksen verkko-oppimisympäristö sopii alustaksi kaikille avoimille verkkokursseille. Erityisesti laajoja oppijajoukkoja kiinnostavat kurssit hyötyvät oppimisympäristön automaatio-ominaisuuksista: monet asiat vastausten arvioinnista aina suoritusten ja opintopisteiden siirtämiseen Helsingin yliopiston opintorekisteriin voidaan hoitaa pitkälti automaattisesti. Oppimisympäristö on rakennettu myös niin, että kursseilla tehtävä tutkimus onnistuu helposti.
+[MOOC-keskuksen verkko-oppimisympäristö](/learning-environment) sopii alustaksi kaikille avoimille verkkokursseille. Erityisesti laajoja oppijajoukkoja kiinnostavat kurssit hyötyvät oppimisympäristön automaatio-ominaisuuksista: monet asiat vastausten arvioinnista aina suoritusten ja opintopisteiden siirtämiseen Helsingin yliopiston opintorekisteriin voidaan hoitaa pitkälti automaattisesti. Oppimisympäristö on rakennettu myös niin, että kursseilla tehtävä tutkimus onnistuu helposti.
 
 Tarjoamme monipuolista verkko-oppimisympäristöä myös muiden oppilaitosten koulutustarpeisiin. Keskustelemme mielellämme tästä tarkemmin kanssanne.
 
