Change example course name and organization in VSCode instructions (FI)

--- a/frontend/public/md_pages/installation/ohjelmoinnin_aloittaminen_vscode_fi.mdx
+++ b/frontend/public/md_pages/installation/ohjelmoinnin_aloittaminen_vscode_fi.mdx
@@ -26,9 +26,9 @@ Mikäli My courses -näkymä ei ole aktiivinen, pääset sinne painamalla "My co
 Kursseja voit lisätä painamalla **Add new course** painiketta (kuvassa kohta 2).
 
 Painamalla **Add new course** painiketta laajennus näyttää kaikki mahdolliset organisaatiot, jotka tarjoavat kursseja.
-Etsi kurssimateriaalissa mainittu organisaatio ja valitse tämä (kuvassa kohta 3).
+Etsi **kurssimateriaalissa mainittu** organisaatio ja valitse tämä (kuvassa kohta 3).
 
-Esimerkiksi kurssilla "Ohjelmoinnin perusteet Python, kesä 2020" organisaationa on "Helsingin Yliopisto".
+Esimerkiksi "Ohjelmoinnin MOOC 202X", organisaationa "MOOC".
 
 ![Organisaation valinta](vscode/select-org.webp)
 
