Change example course name and organization in VSCode instructions (EN)

--- a/frontend/public/md_pages/installation/ohjelmoinnin_aloittaminen_vscode_en.mdx
+++ b/frontend/public/md_pages/installation/ohjelmoinnin_aloittaminen_vscode_en.mdx
@@ -27,9 +27,9 @@ If you're not at this view, press "My courses" (see picture point 1).
 You can add courses to the list by clicking **Add new course** button (see picture point 2).
 
 By clicking **Add new course** the extension will show all possible organizations that offer courses.
-Search and select the organization that is mentioned in your course material (see picture point 3).
+Search and select the organization that is **mentioned in your course material** (see picture point 3).
 
-For example on the course "Ohjelmoinnin perusteet Python, kesä 2020" the organization is "Helsingin Yliopisto".
+For example on the course "Python Programming 202X" the organization is "MOOC".
 
 ![Choose organisation](vscode/select-org.webp)
 
